Import of SHOORICK/Lingua-RU-Inflect-0.02 from CPAN.
gitpan-cpan-distribution: Lingua-RU-Inflect
gitpan-cpan-version:      0.02
gitpan-cpan-path:         SHOORICK/Lingua-RU-Inflect-0.02.tar.gz
gitpan-cpan-author:       SHOORICK
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 --- #YAML:1.0
 name:               Lingua-RU-Inflect
-version:            0.01
-abstract:           Lingua::RU::Inflect — Inflect russian names
+version:            0.02
+abstract:           Lingua::RU::Inflect - Inflect russian names
 author:
     - Alexander Sapozhnikov <shoorick@cpan.org>
 license:            perl
