--- a/META.yml
+++ b/META.yml
@@ -1,23 +1,23 @@
---- #YAML:1.0
-name:               Lingua-RU-Inflect
-version:            0.04
-abstract:           Lingua::RU::Inflect - Inflect russian names
+---
+abstract: 'Lingua::RU::Inflect - Inflect russian names'
 author:
-    - Alexander Sapozhnikov <shoorick@cpan.org>
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Alexander Sapozhnikov <shoorick@cpan.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    List::MoreUtils:  0
-    Test::More:       0
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.57_05
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.64, CPAN::Meta::Converter version 2.112621'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Lingua-RU-Inflect
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  List::MoreUtils: 0
+  Test::More: 0
+version: 0.05
